fixing input text alignment

--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -33,3 +33,7 @@ input.dummy {
 textarea.dummy {
   padding-left: 35px;
 }
+
+.col-height {
+  height: 60px;
+}
