--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -18,4 +18,5 @@
 #u-pick p {
   padding: 0px 450px 0px 450px;
   font-size: 30px;
+  text-align: center;
 }
